optimized requests by enabling asynchronous calls